fix TopicTakeaway header spacing

--- a/src/sass/components/topictakeaway.scss
+++ b/src/sass/components/topictakeaway.scss
@@ -1,3 +1,7 @@
+.topic-takeaway-list {
+	margin-top: 1.5rem;
+}
+
 .topic-takeaway-list ul {
 	list-style:none;
 	padding-left: 1em;
@@ -24,6 +28,10 @@
 
 .topic-takeaway-output {
 	margin-left: -8px;
+}
+
+.topic-takeaway-container {
+	margin-top: 2rem;
 }
 
 .topic-takeaway-card-content {
